@@ -1,7 +1,34 @@
 <table border=0>
+<tr bgcolor=lightgreen>
+<td>05:45
+<td><td>
+<td>tag <b>qopqdp0-7-6</b> added
+</tr>
+<tr>
+<td colspan=4 bgcolor=lightblue><b>2006-12-14</b>
+<tr bgcolor=lightgrey>
+<td>05:45
+<td>osborn
+<td>
+NEWS
+1.8<br>
+configure
+1.18<br>
+configure.ac
+1.19<br>
+examples/dw_invert_bench.c
+1.5<br>
+lib/asqtad_invert_p.c
+1.11<br>
+lib/dw_invert_p.c
+1.5<br>
+<td>Changed stopping condition in asqtad 2 source to agree with MILC.
+Added preconditioner to DW inverter.
+</tr>
+
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-22</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>00:53
 <td>osborn
 <td>
@@ -12,7 +39,7 @@ lib/asqtad_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-21</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:54
 <td>osborn
 <td>
@@ -44,7 +71,7 @@ lib/invert_cg_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-17</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:32
 <td>osborn
 <td>
@@ -53,7 +80,7 @@ include/Makefile.am
 <td>Added generic_vD.h to Makefile.am.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:26
 <td>osborn
 <td>
@@ -90,7 +117,7 @@ lib/invert_cg_vD_f.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-15</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>17:52
 <td>osborn
 <td>
@@ -122,7 +149,7 @@ lib/wilson_invert_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-10-30</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:02
 <td>osborn
 <td>
@@ -151,7 +178,7 @@ Added gauge loading functions.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-09-26</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:23
 <td>osborn
 <td>
@@ -160,7 +187,7 @@ lib/Makefile.am
 <td>Fix Makefile.am.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:16
 <td>osborn
 <td>
@@ -169,7 +196,7 @@ examples/imp_gauge_force_bench.c
 <td>Changed FF to GF in output.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:12
 <td>osborn
 <td>
@@ -184,7 +211,7 @@ lib/symanzik_1loop_gauge_force_p.c
 <td>Really add files.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:09
 <td>osborn
 <td>
@@ -215,7 +242,7 @@ Added gauge force code.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-06-25</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>13:32
 <td>osborn
 <td>
@@ -267,7 +294,7 @@ Must use QLA &gt;= 1.6.0 now in order to agree with Chroma.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-05-04</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>20:12
 <td>osborn
 <td>
@@ -276,7 +303,7 @@ examples/test_common.h
 <td>Include qmp.h in examples.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>20:09
 <td>osborn
 <td>
@@ -297,7 +324,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-16</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>03:01
 <td>osborn
 <td>
@@ -318,7 +345,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-14</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>20:21
 <td>osborn
 <td>
@@ -335,7 +362,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-04</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>05:44
 <td>osborn
 <td>
@@ -348,7 +375,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-03-14</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>19:32
 <td>osborn
 <td>
@@ -359,7 +386,7 @@ configure.ac
 <td>Added CC, ect. to DISTCHECK_CONFIGURE_FLAGS.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:51
 <td>osborn
 <td>
@@ -368,7 +395,7 @@ include/Makefile.am
 <td>Added generic headers to Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:48
 <td>osborn
 <td>
@@ -385,7 +412,7 @@ examples/wilson_invert_bench.c
 <td>Allow selection of style in benchmarks.  Update version.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>00:54
 <td>osborn
 <td>
@@ -450,7 +477,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-09</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:05
 <td>osborn
 <td>
@@ -463,7 +490,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-03</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:23
 <td>osborn
 <td>
@@ -474,7 +501,7 @@ lib/wilson_invert_f.c
 <td>Added missing files.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:21
 <td>osborn
 <td>
@@ -514,7 +541,7 @@ lib/wilson_invert_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-01-13</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>22:12
 <td>osborn
 <td>
@@ -523,7 +550,7 @@ lib/Makefile.am
 <td>Fixed lib Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:55
 <td>osborn
 <td>
@@ -568,7 +595,7 @@ lib/wilsonp.c
 <td>Moved many files around.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:50
 <td>osborn
 <td>
@@ -599,7 +626,7 @@ lib/common.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-29</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:17
 <td>osborn
 <td>
@@ -638,7 +665,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-16</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>05:47
 <td>osborn
 <td>
@@ -649,7 +676,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-15</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>19:23
 <td>osborn
 <td>
@@ -670,7 +697,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-12</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>06:16
 <td>osborn
 <td>
@@ -681,7 +708,7 @@ lib/wilsonp.c
 <td>Changed Wilson inverter code.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>05:41
 <td>osborn
 <td>
@@ -718,7 +745,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-08</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>01:03
 <td>osborn
 <td>
@@ -741,7 +768,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-01</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>02:02
 <td>osborn
 <td>
@@ -752,7 +779,7 @@ examples/asqtad_test.c
 <td>Small change in test, reran aotoreconf.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>01:51
 <td>osborn
 <td>
@@ -769,7 +796,7 @@ lib/asqtadp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-29</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:26
 <td>osborn
 <td>
@@ -780,7 +807,7 @@ include/qop.h
 <td>Fixed flop bug.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>22:58
 <td>osborn
 <td>
@@ -789,7 +816,7 @@ examples/asqtad_test.c
 <td>Small change to test program output.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>22:52
 <td>osborn
 <td>
@@ -804,7 +831,7 @@ lib/asqtadp.c
 <td>Added new style of dslash and optimization options.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>19:24
 <td>osborn
 <td>
@@ -815,7 +842,7 @@ lib/asqtadp.c
 <td>More changes to test program.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:34
 <td>osborn
 <td>
@@ -824,7 +851,7 @@ examples/asqtad_test.c
 <td>Changes in test program.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>17:36
 <td>osborn
 <td>
@@ -839,7 +866,7 @@ examples/asqtad_test.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-27</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>03:26
 <td>osborn
 <td>
@@ -895,4 +922,4 @@ lib/asqtadp.c
 </tr>
 
 </table>
-<p>This page was created on Thu Dec 14 00:15:58 2006 using <a href="http://josefsson.org/cl2html/">cl2html</a> written by Simon Josefsson.
+<p>This page was created on Thu Dec 14 01:16:27 2006 using <a href="http://josefsson.org/cl2html/">cl2html</a> written by Simon Josefsson.
